# intervals-icu-bulk-uploader-planned-workouts

./: .env.example  .gitignore  .icu.yaml  README.md  index.html  netlify.toml  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  tsconfig.json  ui-design-panel.patch  vite.config.ts
.github/: upload-intervals.yml
.github/workflows/: backfill-weeklies-monthly.yml  backfill.yml  build-tailwind.yml  ci.yml  daily-summary.yml  deploy.yml  fetch-metrics.yml  generate-plan.yml  publish-draft.yml  publish-plan.yml  upload-intervals.yml  upload-plan-intervals.yml  upload-week-plan.yml  weekly-summary.yml  zwo-from-openai.yml
auth/callback/: index.html
config/: rules.json
docs/: _headers  index.html
docs/assets/: tw-input.css  tw.css
examples/: payload.json
intervals-backend/: app.py  auth.py  ddb.py  requirements.txt
netlify/functions/: save-plan.js
plans/: 2025-09-15_2025-09-21.json  2025-09-29_2025-10-05.json  latest.json  plan-2025-08-25.json  plan-2025-09-01.json  plan-2025-09-08.json  plan-2025-09-15.json
plans/drafts/: 2025-09-22_2025-09-28.json  2025-09-29_2025-10-05.json
public/: 404.html  index.html  plan-config.json
schema/: intervalsPlan.schema.json  rules.schema.json
scripts/: fetch_metrics.py  gen_zwo_from_plan.py  generate-plan.mjs  upload_intervals.py  upload_intervals_to_plan.py  upload_plan_to_intervals.py
snapshots/: week-2025-07-21.json
src/: App.tsx  ErrorBoundary.tsx  config.ts  main.tsx
src/lib/: chips.ts  (+17 more)
state/: athlete.json  static-context.md
zwo/: 2025-09-09_-_VO2Max_5x3_120_.zwo
(+102 files in other folders)
