[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intervals-icu-bulk-uploader"
version = "0.3.0"
description = "CLI for uploading planned workouts to Intervals.icu via the REST API"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Tom", email="you@example.com"}]
license = {text = "MIT"}
dependencies = [
  "requests>=2.31.0",
   "PyYAML>=6.0",
]

[project.scripts]
icu-upload = "intervals_icu_uploader.cli:main"
icu-weekly-summary = "intervals_icu_uploader.weekly_summary:main"
icu-daily-summary = "intervals_icu_uploader.daily_summary:main"
icu-make-zwo = "intervals_icu_uploader.make_zwo:main"

[tool.setuptools.packages.find]
where = ["src"]
